# hummingbot-dex-connectors

./: .dockerignore  .gitignore  README.md
aerodrome/: .eslintrc.cjs  CHECKLIST.md  FEATURES.md  README.md  package.json  pnpm-lock.yaml  tsconfig.cjs.json  tsconfig.json  vitest.config.ts
aerodrome/docs/: runtime-integration.md  upstream-notes.md  usage.md
aerodrome/scripts/: write-cjs-package.cjs
aerodrome/src/: aerodrome.ts  config.ts  contracts.ts  errors.ts  gateway-adapter.ts  index.ts  types.ts  utils.ts
aerodrome/src/liquidity/: index.ts  planner.ts  types.ts
aerodrome/src/rewards/: index.ts  planner.ts
aerodrome/src/router-routes/: dto.ts  executeQuote.ts  executeSwap.ts  index.ts  quoteSwap.ts
aerodrome/src/slipstream/: contracts.ts  dto.ts  index.ts  slipstream.ts  types.ts
aerodrome/tests/: aerodrome.test.ts  gateway-adapter.test.ts  liquidity.test.ts  rewards.test.ts  slipstream.test.ts
cowswap/: CHECKLIST.md  FEATURES.md  README.md  pyproject.toml  pyrightconfig.json
cowswap/docker/: hummingbot-api.Dockerfile
cowswap/docs/: dependency-review.md  runtime-integration.md  upstream-notes.md  usage.md
cowswap/src/hummingbot_cowswap/: __init__.py  chain_config.py  client.py  connector.py  cowpy.py  errors.py  hummingbot_adapter.py  models.py  onchain.py  persistence.py  runtime_metadata.py  signing.py
cowswap/tests/: __init__.py  test_chain_config.py  test_client_api_errors.py  test_client_health.py  test_connector_mvp.py  test_cowpy_integration.py  test_hummingbot_adapter_contract.py  test_preflight.py  test_runtime_metadata.py  test_signing_guards.py
