[project]
name = "hummingbot-cowswap-connector"
version = "0.1.0"
description = "MVP CoW Swap connector components for Hummingbot-style order lifecycle integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cowdao-cowpy>=1.0.1,<2",
    "eth-account>=0.13,<1",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = [
    "pyright>=1.1,<2",
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hummingbot_cowswap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with Ruff formatter.
    "D203",   # Incompatible with D211.
    "D213",   # Incompatible with D212.
]

[tool.ruff.lint.per-file-ignores]
"src/hummingbot_cowswap/client.py" = [
    "PLC0415", # cowdao-cowpy has package import side effects; submodules are imported lazily.
]
"src/hummingbot_cowswap/connector.py" = [
    "PLR0913", # Constructor keeps runtime/test dependencies explicit.
]
"src/hummingbot_cowswap/persistence.py" = [
    "PLR0913", # Persisted order metadata is intentionally explicit for restart recovery.
]
"src/hummingbot_cowswap/signing.py" = [
    "PLC0415", # cowdao-cowpy has package import side effects; submodules are imported lazily.
    "S106",    # CoW token balance mode strings are not passwords.
]
"tests/**/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "PLC0415",
    "PLR0913",
    "PLR2004",
    "S101",
    "TC003",
]
"tests/test_cowpy_integration.py" = [
    "BLE001", # cowdao-cowpy wraps API failures; the smoke test asserts the returned API text.
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "PLC0415",
    "PLR0913",
    "PLR2004",
    "S101",
    "TC003",
]
